@@ -61,13 +61,14 @@ Networking, Italy)</li>
 <li>Federico Sacerdoti (D.E. Shaw)<li>
 <li>Jeff Squyres (LAM MPI)</li>
 <li>Prashanth Tamraparni (HP, India)</li>
-<li>Adam Todorski (Rensselaer Polytechnic Institute)</li>
+<li>Jimmy Tang (Trinity College, Ireland)</li>
 <li>Kevin Tew (LLNL/Bringham Young University)</li>
+<li>Adam Todorski (Rensselaer Polytechnic Institute)</li>
 <li>Tim Wickberg (Rensselaer Polytechnic Institute)</li>
 <li>Jay Windley (Linux NetworX)</li>
 <li>Anne-Marie Wunderlin (Bull)</li>
 </ul>
 
-<p style="text-align:center;">Last modified 1 November 2008</p>
+<p style="text-align:center;">Last modified 20 January 2009</p>
 
 <!--#include virtual="footer.txt"-->
