@@ -134,6 +134,8 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 1.3.14
 =========================
+ -- Fix bug in squeue command with sort on job name ("-S j" option) for jobs
+    that lack a name. Previously generated an invalid memory reference.
 
 * Changes in SLURM 1.3.13
 =========================
